# Green_House_Crop

./: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
artifacts/data_ingestion/: test.csv  train.csv
artifacts/data_training/: model.pickel
artifacts/data_transformation/: preprocessor.pkl  test.csv  train.csv
artifacts/model_evaluation/: metrics.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
src/Green_House_Crop/: exception.py
src/Green_House_Crop/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evalution.py  model_training.py
src/Green_House_Crop/config/: configuration.py
src/Green_House_Crop/constants/: __init__.py
src/Green_House_Crop/entity/: config_entity.py
src/Green_House_Crop/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evalution_pipeline.py  model_training_pipeline.py  predict_pipeline.py
src/Green_House_Crop/utils/: common.py
yaml_config/: config.yaml  params.yaml  schema.yaml
